cluster/apps/home/iobroker/base/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iobroker
  namespace: iobroker
  labels:
    app.kubernetes.io/instance: iobroker
    app.kubernetes.io/name: iobroker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: iobroker-iobroker
      app.kubernetes.io/name: iobroker
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: iobroker-iobroker
        app.kubernetes.io/name: iobroker
    spec:
      hostNetwork: true 
      nodeSelector:
        kubernetes.io/hostname: k3s-w01
      # securityContext:
      #   runAsUser: 0
      #   runAsGroup: 0
      #   sysctls:
      #   - name: "net.ipv4.ip_unprivileged_port_start"
      #     value: "80"
      containers:
      - name: iobroker
        image: buanet/iobroker:v9.1.2
        # command: ["sudo", "sysctl", "-w", "net.ipv4.ip_unprivileged_port_start=80"]
        securityContext:
          privileged: true
          # capabilities:
          #   drop:
          #   - "ALL"
          #   add:
          #   - "NET_BIND_SERVICE"
          # runAsUser: 0
          # capabilities:
          #   add: ["NET_BIND_SERVICE"]
        volumeMounts:
        - name: iobroker-data
          mountPath: /opt/iobroker
      volumes:
      - name: iobroker-data
        persistentVolumeClaim:
          claimName: iobroker-data
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: k3s.amrap030.home/hardware
                    operator: In
                    values:
                      - zigbee
