cluster/apps/home/iobroker/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iobroker
  namespace: iobroker
  labels:
    app.kubernetes.io/instance: iobroker
    app.kubernetes.io/name: iobroker
spec:
  selector:
    app.kubernetes.io/instance: iobroker-iobroker
    app.kubernetes.io/name: iobroker
  ports:
  - name: iobroker
    protocol: TCP
    port: 8082
    targetPort: 8081
  - name: node-red
    protocol: TCP
    port: 1880
    targetPort: 1880
  - name: shelly
    protocol: TCP
    port: 1883
    targetPort: 1883
  type: ClusterIP
  clusterIP: None
