cluster/apps/home/iobroker/base/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: traefik-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
  name: iobroker-ingress
  namespace: home
spec:
  rules:
    - host: iobroker.amrap030.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iobroker
                port:
                  number: 8082   
    - host: nodered.amrap030.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iobroker
                port:
                  number: 1880 
    - host: shelly.amrap030.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iobroker
                port:
                  number: 1883   
  tls:
    - hosts:
        - iobroker.amrap030.home
        - nodered.amrap030.home
        - shelly.amrap030.home
      secretName: iobroker-cert
